fix spacing on footer links

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -146,11 +146,6 @@ footer {
   border-top: 1px solid #222;
 }
 
-footer a { 
-  border: 0; 
-  margin: 0 0.5em; 
-  color: #888; 
-}
 
 @media print {
   body { font-size: 12px; }
